<resources>
    <string name="app_name">OYO Rooms Test</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="exit_msg">Are you sure you want to Exit?</string>
    <string name="firebase_referance_uri">https://oyo-rooms-test-default-rtdb.firebaseio.com/</string>
    <string name="icon_uri">https://redirect.field59.com/video/thumb/ce96d60ded0765b49846446a40c48d5584539694</string>
    <string name="under_implementation">Under implementation</string>

    <!--Toolbar title-->
    <string name="bookings">Bookings</string>
    <string name="offers">Offers</string>
    <string name="invite_and_earn">Invite &amp; Earn</string>
    <string name="need_help">Need Help</string>

    <!--Splash Screen-->
    <string name="welcome_message">Hi, Welcome</string>

    <!--Drawer-->
    <string name="username">Hi Username</string>
    <string name="mobile">Mobile</string>
    <string name="offer">Book your first OYO, starting from</string>
    <string name="price">Rs 399</string>

    <!--Activity Details-->
    <string name="hotel_name">Hotel Name/Details View</string>
    <string name="location_title">Location: </string>
    <string name="location">LocationName</string>
    <string name="address_title">Address: </string>
    <string name="address">Full Address</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>

    <!--Activity Search-->
    <string name="msg_no_result">No result found</string>
    <string name="msg_search_again">Search again</string>

    <!--Activity Add Hotel-->
    <string name="id">Id</string>
    <string name="add_hotel_name">Hotel Name</string>
    <string name="add_hotel_location">Location</string>
    <string name="add_hotel_poster">Poster</string>
    <string name="button_add_hotel_details">Add Hotel Details</string>

    <!--Fragment Home-->
    <string name="search_msg">Search for Hotels, City or Location</string>
    
    <!--Fragment Booking-->
    <string name="button_book_now">Book Now</string>
    <string name="title_start_booking">Start booking to unlock OYO rooms</string>

    <!--Fragment Offer-->
    <string name="discover_oyo">Discover OYO</string>
    <string name="offer_partner">Offer Partners</string>
    
    <!--Fragment Invite and Earn-->
    <string name="your_invite_code">Your invite code</string>
    <string name="your_invite_code_placeholder">RANGWOX93A</string>
    
</resources>