<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.sagar.oyoroomstest.viewModel.SearchViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"/>

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@id/toolbar"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_msg" />

        <View
            android:id="@+id/viewDivider"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_below="@id/searchView"
            android:background="@color/grey" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suggestionView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewDivider" />

        <TextView
            android:id="@+id/noResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/msg_no_result"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noResult"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:text="@string/msg_search_again"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</layout>