<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sagar.oyoroomstest.viewModel.DetailsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPoster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHotelDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/white"
                app:cardBackgroundColor="@android:color/transparent"
                card_view:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/textViewHotelName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/hotel_name"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <LinearLayout
                        android:id="@+id/linearLayoutLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewHotelName"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewHotelLocationTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location_title"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textViewHotelLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayoutAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linearLayoutLocation"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewHotelAddressTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address_title"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                        <TextView
                            android:id="@+id/textViewHotelAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayoutDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linearLayoutAddress"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewHotelDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/linearLayoutDescription"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btn_background_element"
                        android:text="Book Now"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="@{(v) -> viewModel.onClick(v)}"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />
    </RelativeLayout>
</layout>