<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.sagar.oyoroomstest.viewModel.InviteAndEarnFragmentViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageViewInvitePoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/invite_poster"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDiscover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewInvitePoster"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="15dp"
                android:elevation="3dp"
                android:orientation="vertical"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <com.sagar.oyoroomstest.utils.CustomTextViewMedium
                        android:id="@+id/textViewInviteTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_invite_code"
                        android:textColor="@color/dark_grey"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"/>

                    <com.sagar.oyoroomstest.utils.CustomTextViewMedium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textViewInviteTitle"
                        android:text="@string/your_invite_code_placeholder"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</layout>