<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.sagar.oyoroomstest.viewModel.AddHotelViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPoster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHotelDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/white"
                app:cardBackgroundColor="@android:color/transparent"
                card_view:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:hint="@string/id"
                        android:layout_margin="5dp"
                        app:shapeAppearance="@style/Rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textInputLayoutId"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:hint="@string/add_hotel_name"
                        android:layout_margin="5dp"
                        app:shapeAppearance="@style/Rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textInputLayoutName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:hint="@string/add_hotel_location"
                        android:layout_margin="5dp"
                        app:shapeAppearance="@style/Rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPoster"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textInputLayoutLocation"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:hint="@string/add_hotel_poster"
                        android:layout_margin="5dp"
                        app:shapeAppearance="@style/Rounded">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPoster"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/buttonAddHotel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textInputLayoutPoster"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/btn_background_element"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:onClick="@{(v) -> viewModel.onClick(v)}"
                        android:text="@string/button_add_hotel_details"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="@{(v) -> viewModel.onClick(v)}"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />
    </RelativeLayout>
</layout>